--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-modal": "^3.16.1",
+    "telefunc": "^0.1.46",
     "typescript": "4.9.5"
   },
   "devDependencies": {
